--- a/index.html
+++ b/index.html
@@ -111,20 +111,20 @@
           <nav class="nav">
             <div class="nav__container-1">
               <button class="button nav__button-burger">
-                <img class="nav__img-burger" src="../src/img/burger.svg" alt="меню">
+                <img class="nav__img-burger" src="img/burger.svg" alt="меню">
               </button>
               <p class="nav__img-divider-1"></p>
-              <img class="nav__img-logo" src="../src/img/Group.svg" alt="логотип cps">
+              <img class="nav__img-logo" src="img/Group.svg" alt="логотип cps">
             </div>
             <div class="nav__container-2">
               <button class="button nav__button-call">
-                <img class="nav__img-call" src="../src/img/call.svg" alt="звонок">
+                <img class="nav__img-call" src="img/call.svg" alt="звонок">
               </button>
               <button class="button nav__button-chat">
-                <img class="nav__img-chat" src="../src/img/chat.svg" alt="чат">
+                <img class="nav__img-chat" src="img/chat.svg" alt="чат">
               </button>
               <button class="button nav__button-profile">
-                <img class="nav__img-profile" src="../src/img/profile.svg" alt="профиль">
+                <img class="nav__img-profile" src="img/profile.svg" alt="профиль">
               </button>
             </div>
           </nav>
@@ -133,10 +133,10 @@
           <div class="main__container-nav">
             <p class="main__img-divider"></p>
             <button class="button main__button-repair">
-              <span class="main__text-repair">Оставить заявку</span><img class="main__img-repair" src="../src/img/repair.svg" alt="настройки">
+              <span class="main__text-repair">Оставить заявку</span><img class="main__img-repair" src="img/repair.svg" alt="настройки">
             </button>
             <button class="button main__button-checkstatus">
-              <span class="main__text-checkstatus">Статус ремонта</span><img class="main__img-checkstatus" src="../src/img/checkstatus.svg" alt="статус ремонта">
+              <span class="main__text-checkstatus">Статус ремонта</span><img class="main__img-checkstatus" src="img/checkstatus.svg" alt="статус ремонта">
             </button>
           </div>
           <h1 class="main__h1-services">Услуги и сервисы</h1>
@@ -157,9 +157,10 @@
                   гордимся тем, что к нам обращаются по рекомендациям и, в свою
                   очередь, советуют нас родным и близким.</span></p>
 
-              <button class="main__button-read-more"><img class="main__img-expand" src="../src/img/expand.png">Читать далее</button>
+              <button class="main__button-read-more"><img class="main__img-expand" src="img/expand.png">Читать
+                далее</button>
             </div>
-            <img class="main__img-big-pictire" src="../src/img/big_picture.png">
+            <img class="main__img-big-pictire" src="img/big_picture.png">
           </section>
         </main>
 
@@ -172,38 +173,38 @@
           <div class="swiper-wrapper all-card">
             <div class="swiper-slide all-card__lenovo">
               <a class="all-card__link">
-                <img src="../src/img/lenovo.png" alt="логотип Lenovo"><img src="../src/img/go.png">
+                <img src="img/lenovo.png" alt="логотип Lenovo"><img src="img/go.png">
               </a>
             </div>
             <div class="swiper-slide all-card__samsung">
-              <a class="all-card__link"><img src="../src/img/samsung.png" alt="логотип Samsung"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/samsung.png" alt="логотип Samsung"><img src="img/go.png"></a>
             </div>
             <div class="swiper-slide all-card__apple">
-              <a class="all-card__link"><img src="../src/img/apple.png" alt="логотип Apple"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/apple.png" alt="логотип Apple"><img src="img/go.png"></a>
             </div>
             <div class="swiper-slide all-card__viewsonic">
-              <a class="all-card__link"><img src="../src/img/viewsonic.png" alt="логотип ViewSonic"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/viewsonic.png" alt="логотип ViewSonic"><img src="img/go.png"></a>
             </div>
             <div class="swiper-slide all-card__bosh">
-              <a class="all-card__link"><img src="../src/img/bosh.png" alt="логотип Bosh"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/bosh.png" alt="логотип Bosh"><img src="img/go.png"></a>
             </div>
             <div class="swiper-slide all-card__hp">
-              <a class="all-card__link"><img src="../src/img/hp.png" alt="логотип HP"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/hp.png" alt="логотип HP"><img src="img/go.png"></a>
             </div>
             <div class="swiper-slide all-card__acer">
-              <a class="all-card__link"><img src="../src/img/acer.png" alt="логотип Acer"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/acer.png" alt="логотип Acer"><img src="img/go.png"></a>
             </div>
             <div class="swiper-slide all-card__sony">
-              <a class="all-card__link"><img src="../src/img/sony.png" alt="логотип Sony"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/sony.png" alt="логотип Sony"><img src="img/go.png"></a>
             </div>
             <div class="swiper-slide all-card__lenovo">
-              <a class="all-card__link"><img src="../src/img/lenovo.png" alt="логотип Lenovo"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/lenovo.png" alt="логотип Lenovo"><img src="img/go.png"></a>
             </div>
             <div class="swiper-slide all-card__samsung">
-              <a class="all-card__link"><img src="../src/img/samsung.png" alt="логотип Samsung"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/samsung.png" alt="логотип Samsung"><img src="img/go.png"></a>
             </div>
             <div class="swiper-slide all-card__apple">
-              <a class="all-card__link"><img src="../src/img/apple.png" alt="логотип Apple"><img src="../src/img/go.png"></a>
+              <a class="all-card__link"><img src="img/apple.png" alt="логотип Apple"><img src="img/go.png"></a>
             </div>
           </div>
 
@@ -221,35 +222,35 @@
           <div class="swiper-wrapper repair-cards">
             <div class="swiper-slide repair-cards__laptops repair-cards__container">
               <a class="repair-cards__link">Ремонт ноутбуков</a>
-              <img class="repair-cards__image-go" src="../src/img/go.png">
+              <img class="repair-cards__image-go" src="img/go.png">
             </div>
             <div class="swiper-slide repair-cards__tablets repair-cards__container">
               <a class="repair-cards__link">Ремонт планшетов</a>
-              <img class="repair-cards__image-go" src="../src/img/go.png">
+              <img class="repair-cards__image-go" src="img/go.png">
             </div>
             <div class="swiper-slide repair-cards__computers repair-cards__container">
               <a class="repair-cards__link">Ремонт ПК</a>
-              <img class="repair-cards__image-go" src="../src/img/go.png">
+              <img class="repair-cards__image-go" src="img/go.png">
             </div>
             <div class="swiper-slide repair-cards__monitors repair-cards__container">
               <a class="repair-cards__link">Ремонт мониторов</a>
-              <img class="repair-cards__image-go" src="../src/img/go.png">
+              <img class="repair-cards__image-go" src="img/go.png">
             </div>
             <div class="swiper-slide repair-cards__laptops repair-cards__container">
               <a class="repair-cards__link">Ремонт ноутбуков</a>
-              <img class="repair-cards__image-go" src="../src/img/go.png">
+              <img class="repair-cards__image-go" src="img/go.png">
             </div>
             <div class="swiper-slide repair-cards__tablets repair-cards__container">
               <a class="repair-cards__link">Ремонт планшетов</a>
-              <img class="repair-cards__image-go" src="../src/img/go.png">
+              <img class="repair-cards__image-go" src="img/go.png">
             </div>
             <div class="swiper-slide repair-cards__computers repair-cards__container">
               <a class="repair-cards__link">Ремонт ПК</a>
-              <img class="repair-cards__image-go" src="../src/img/go.png">
+              <img class="repair-cards__image-go" src="img/go.png">
             </div>
             <div class="swiper-slide repair-cards__monitors repair-cards__container">
               <a class="repair-cards__link">Ремонт мониторов</a>
-              <img class="repair-cards__image-go" src="../src/img/go.png">
+              <img class="repair-cards__image-go" src="img/go.png">
             </div>
           </div>
 
